--- a/analisis.clima/README.Rmd
+++ b/analisis.clima/README.Rmd
@@ -37,7 +37,7 @@ install.packages("devtools")
 ```
 
 
-```{r}
+```{r, eval=FALSE}
 # Instalar el paquete analisis.clima desde GitHub
 devtools::install_github("catavujovich/analisis.clima")
 ```
