Agrego acción de GitHub para cobertura de tests

--- a/analisis.clima/README.Rmd
+++ b/analisis.clima/README.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/catavujovich/Datos-Meteorol-gicos/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/catavujovich/Datos-Meteorol-gicos/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/catavujovich/Datos-Meteorol-gicos/graph/badge.svg)](https://app.codecov.io/gh/catavujovich/Datos-Meteorol-gicos)
 <!-- badges: end -->
 
 **analisis.clima** es un paquete de R desarrollado para **leer, procesar y analizar datos meteorológicos** provenientes de distintas estaciones.  
